Client sends tapDown TapCancel TapUnconfirmed and showPress gesture events.

These events are used in content browser side gesture handling logic to update internal state or state machine, such as in render_widget_host_impl and tap_suppression_controller.

BUG=598876,611590

Review-Url: https://codereview.chromium.org/1975213003
Cr-Commit-Position: refs/heads/master@{#393933}

Former-commit-id: d101e6286d62003088249577e5f931c335f6d060